--- a/webapp.html
+++ b/webapp.html
@@ -1,4 +1,4 @@
-<body bgcolor="yellow">
+<body bgcolor="red">
 <center>
 <h1>My WebApp</h1>
 <h2>DevOps Assembly Lines Training Project Task</h2><br>
